# ssh-config-studio

./: .gitignore  README.md  com.sshconfigstudio.app.json  com.sshconfigstudio.app.yml  meson.build
data/: meson.build  ssh-config-studio.css  ssh-config-studio.desktop  ssh-config-studio.gresource.xml
data/ui/: host_editor.blp  host_editor.ui  host_list.blp  host_list.ui  main_window.blp  main_window.ui  preferences_dialog.blp  preferences_dialog.ui  search_bar.blp  search_bar.ui  test_connection_dialog.blp
po/: POTFILES  en.po  meson.build  ssh-config-studio.pot
src/: launch.py  main.py  meson.build  requirements.txt  setup.py  ssh-config-studio.desktop  ssh_config_parser.py
src/ui/: host_editor.py  host_list.py  main_window.py  preferences_dialog.py  search_bar.py  test_connection_dialog.py
