python_sources = [
  'main.py',
  'ssh_config_parser.py',
  'ui/host_editor.py',
  'ui/host_list.py',
  'ui/main_window.py',
  'ui/preferences_dialog.py',
  'ui/search_bar.py',
]

python_installation.install_sources(
  ['ssh_config_parser.py', 'main.py', '__init__.py'],
  subdir: 'ssh_config_studio'
)

python_installation.install_sources(
  ['ui/host_editor.py', 'ui/host_list.py', 'ui/main_window.py', 'ui/preferences_dialog.py', 'ui/search_bar.py', 'ui/__init__.py'],
  subdir: 'ssh_config_studio/ui'
)

python_installation.install_sources(
  [],
  subdir: 'ssh_config_studio/ui'
)
